tests/ui/parser/unsafe-foreign-mod-2.stderr
error: expected `{`, found keyword `unsafe`
  --> $DIR/unsafe-foreign-mod-2.rs:1:12
   |
LL | extern "C" unsafe {
   |            ^^^^^^ expected `{`

error: functions in `extern` blocks cannot have qualifiers
  --> $DIR/unsafe-foreign-mod-2.rs:3:5
   |
LL | extern "C" unsafe {
   | ----------------- in this `extern` block
LL |
LL |     unsafe fn foo();
   |     ^^^^^^ help: remove this qualifier

error: aborting due to 2 previous errors

